--- a/.github/ISSUE_TEMPLATE/----.md
+++ b/.github/ISSUE_TEMPLATE/----.md
@@ -1,7 +1,6 @@
 ---
 name: 周末总结
 about: 要求：至少100字，多亦善。可以只涉及一点，也可以谈及多个关键主题。
-title: 周末总结
 labels: 总结
 assignees: ''
 
@@ -10,4 +9,4 @@ assignees: ''
 **在这里写下你的班级，姓名**
 
 **在这儿写下你的标题**
-这儿就是你的发挥空间，可以写学习心得、学习方法、灵感顿悟，等等等等……
+<br>这儿就是你的发挥空间，可以写学习心得、学习方法、灵感顿悟，等等等等……
