--- a/.github/ISSUE_TEMPLATE/----.md
+++ b/.github/ISSUE_TEMPLATE/----.md
@@ -6,8 +6,6 @@ assignees: ''
 
 ---
 
-**在这里写下你的班级，姓名**
-
-**在这儿写下你的标题**
+**在上方title写下你的班级，姓名，日期（此行记得删除）** **在这儿写下你的标题**
 
 这儿就是你的发挥空间，可以写学习心得、学习方法、灵感顿悟，等等等等……
