--- a/.github/ISSUE_TEMPLATE/----.md
+++ b/.github/ISSUE_TEMPLATE/----.md
@@ -9,3 +9,7 @@ assignees: ''
 **在上方title写下你的班级，姓名，日期（此行记得删除）** **在这儿写下你的标题**
 
 这儿就是你的发挥空间，可以写学习心得、学习方法、灵感顿悟，等等等等……
+
+
+高一四班 宋禹瑶 2019-9-1
+开学第一周，学习生物学的重点内容有：（1）细胞是生物体结构和功能的基本单位；（2）许多植物和动物是多细胞生物，它们依赖各种分化的细胞密切合作，共同完成一系列复杂的生命活动；（3）病毒没有细胞结构，必须依赖活细胞才能生存。生命系统的结构层次是细胞、组织、器官、系统、个体、种群、群落、生态系统、生物圈；（4）细胞是除了病毒外的生物体结构；（5）单细胞生物：单个细胞就能完成各种生命活动。
